--- a/platformio.ini
+++ b/platformio.ini
@@ -15,5 +15,6 @@ framework = arduino
 lib_deps = 
     854
 
-monitor_port = /dev/ttyACM0
+monitor_port = COM3
+#monitor_port = /dev/ttyACM0
 monitor_speed = 115200
