--- a/platformio.ini
+++ b/platformio.ini
@@ -8,12 +8,18 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:uno]
-platform = atmelavr
-board = uno
+[env:teensy]
+platform = teensy
+board = teensy31
 framework = arduino
 lib_deps = 
     854
+    iBUS
+
+build_flags = 
+  -Wall 
+  -Wextra
+  -D SERIAL_DBG=0
 
 #monitor_port = COM3
 monitor_port = /dev/ttyACM0
