--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,6 @@ build_flags =
   -Wextra
   -D SERIAL_DBG=0
 
-monitor_port = COM3
-#monitor_port = /dev/ttyACM0
+#monitor_port = COM3
+monitor_port = /dev/ttyACM0
 monitor_speed = 115200
